# workflow-skill

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
docs/: repository-standards.md
docs/superpowers/plans/: 2026-03-29-github-presentation-optimization.md
docs/superpowers/specs/: 2026-03-29-github-optimization-design.md
examples/: research_workflow.txt  research_workflow_actions.json  run_example.py
src/fsm_agent/: __init__.py  __main__.py  api.py  errors.py  models.py  parser.py  runtime.py  skills.py  validator.py
tests/: spec_fixtures.py  test_cli.py  test_e2e.py  test_parser.py  test_runtime.py  test_validator.py
